--- a/.build/debug.yaml
+++ b/.build/debug.yaml
@@ -2,22 +2,22 @@ client:
   name: swift-build
 tools: {}
 targets:
-  "test": ["<swiftgd.module>","<nUIKit.module>","<nUIKit.exe>"]
-  "main": ["<swiftgd.module>","<nUIKit.module>","<nUIKit.exe>"]
+  "test": ["<SwiftGD.module>","<nUIKit.module>","<nUIKit.exe>"]
+  "main": ["<SwiftGD.module>","<nUIKit.module>","<nUIKit.exe>"]
 default: "main"
 commands: 
-  "<swiftgd.module>":
+  "<SwiftGD.module>":
     tool: swift-compiler
     executable: "/home/honey/swift3/usr/bin/swiftc"
-    module-name: "swiftgd"
-    module-output-path: "/home/honey/Documents/nUIKit/.build/debug/swiftgd.swiftmodule"
+    module-name: "SwiftGD"
+    module-output-path: "/home/honey/Documents/nUIKit/.build/debug/SwiftGD.swiftmodule"
     inputs: ["<Cgd.module>"]
-    outputs: ["<swiftgd.module>","/home/honey/Documents/nUIKit/.build/debug/swiftgd.build/swiftgd.swift.o"]
+    outputs: ["<SwiftGD.module>","/home/honey/Documents/nUIKit/.build/debug/SwiftGD.build/SwiftGD.swift.o"]
     import-paths: ["/home/honey/Documents/nUIKit/.build/debug"]
-    temps-path: "/home/honey/Documents/nUIKit/.build/debug/swiftgd.build"
-    objects: ["/home/honey/Documents/nUIKit/.build/debug/swiftgd.build/swiftgd.swift.o"]
+    temps-path: "/home/honey/Documents/nUIKit/.build/debug/SwiftGD.build"
+    objects: ["/home/honey/Documents/nUIKit/.build/debug/SwiftGD.build/SwiftGD.swift.o"]
     other-args: ["-j8","-D","SWIFT_PACKAGE","-Onone","-g","-enable-testing","-Xcc","-fmodule-map-file=/home/honey/Documents/nUIKit/Packages/Cgd-0.1.0/module.modulemap","-Xcc","-I/usr/include","-L/usr/lib/x86_64-linux-gnu","-lgd","-module-cache-path","/home/honey/Documents/nUIKit/.build/debug/ModuleCache"]
-    sources: ["/home/honey/Documents/nUIKit/Packages/swiftgd-1.0.0/Sources/swiftgd.swift"]
+    sources: ["/home/honey/Documents/nUIKit/Packages/SwiftGD-1.2.0/Sources/SwiftGD.swift"]
     is-library: true
     enable-whole-module-optimization: false
     num-threads: "8"
@@ -27,7 +27,7 @@ commands:
     executable: "/home/honey/swift3/usr/bin/swiftc"
     module-name: "nUIKit"
     module-output-path: "/home/honey/Documents/nUIKit/.build/debug/nUIKit.swiftmodule"
-    inputs: ["<Cgd.module>","<swiftgd.module>"]
+    inputs: ["<Cgd.module>","<SwiftGD.module>"]
     outputs: ["<nUIKit.module>","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/ViewController.swift.o","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/Window.swift.o","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/main.swift.o","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/InitialViewController.swift.o","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/View.swift.o","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/Application.swift.o"]
     import-paths: ["/home/honey/Documents/nUIKit/.build/debug"]
     temps-path: "/home/honey/Documents/nUIKit/.build/debug/nUIKit.build"
@@ -41,7 +41,7 @@ commands:
   "<nUIKit.exe>":
     tool: shell
     description: "Linking ./.build/debug/nUIKit"
-    inputs: ["/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/ViewController.swift.o","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/Window.swift.o","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/main.swift.o","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/InitialViewController.swift.o","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/View.swift.o","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/Application.swift.o","/home/honey/Documents/nUIKit/.build/debug/swiftgd.build/swiftgd.swift.o"]
+    inputs: ["/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/ViewController.swift.o","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/Window.swift.o","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/main.swift.o","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/InitialViewController.swift.o","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/View.swift.o","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/Application.swift.o","/home/honey/Documents/nUIKit/.build/debug/SwiftGD.build/SwiftGD.swift.o"]
     outputs: ["<nUIKit.exe>","/home/honey/Documents/nUIKit/.build/debug/nUIKit"]
-    args: ["/home/honey/swift3/usr/bin/swiftc","-Xlinker","-rpath=$ORIGIN","-g","-L/home/honey/Documents/nUIKit/.build/debug","-o","/home/honey/Documents/nUIKit/.build/debug/nUIKit","-emit-executable","-Xcc","-I/usr/include","-L/usr/lib/x86_64-linux-gnu","-lgd","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/ViewController.swift.o","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/Window.swift.o","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/main.swift.o","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/InitialViewController.swift.o","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/View.swift.o","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/Application.swift.o","/home/honey/Documents/nUIKit/.build/debug/swiftgd.build/swiftgd.swift.o"]
+    args: ["/home/honey/swift3/usr/bin/swiftc","-Xlinker","-rpath=$ORIGIN","-g","-L/home/honey/Documents/nUIKit/.build/debug","-o","/home/honey/Documents/nUIKit/.build/debug/nUIKit","-emit-executable","-Xcc","-I/usr/include","-L/usr/lib/x86_64-linux-gnu","-lgd","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/ViewController.swift.o","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/Window.swift.o","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/main.swift.o","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/InitialViewController.swift.o","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/View.swift.o","/home/honey/Documents/nUIKit/.build/debug/nUIKit.build/Application.swift.o","/home/honey/Documents/nUIKit/.build/debug/SwiftGD.build/SwiftGD.swift.o"]
 
